# deepvalve-paper

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  _config.yml  _toc.yml  cspell.config.yaml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build_docs.yml  deploy_docs.yml  pre-commit.yml
code/: README.md  config.py  data_loader.py  data_unification.py  dice_customised.py  evaluate_models.py  icp.py  my_procrustes.py  new_splitting_method.py  plotter.py  prepare_data.ipynb  spline_fitting.py  test.py  uq_dsnt.py  uq_seg.py  utils.py
code/regression/: arten_model.py  comparison_methods.ipynb  dsnt_main.py  dsnt_model.py  dsnt_reg.py  model_dnst.py  plot.py  plot_example.py  results_post.py  torch_cnn.py  torch_resnet.ipynb  torch_resnet.py  torch_unet.py  torch_unetreg.ipynb  unet_main.py  unet_regression.py
code/segmentation/: DNST.ipynb  RDP.ipynb  config.py  config_seg.py  dataset.py  giulia_test.py  label_class_dict.csv  main.py  test_model.ipynb  utils.py
data/: README.md  create_data_frame.py  data_annotations_and_error.ipynb  data_new.csv  new_annotations
data/regression/: test_patients_names.csv  train_patients_names.csv  val_patients_names.csv
data/segmentation_data/: create_data.ipynb  create_data.py  utils.py
docs/: about.md  inference.md  pipeline_guide.md  references.bib  training.md
