[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Supplementary code for the paper: DeepValve: an automatic detection pipeline for the mitral valve in cardiac magnetic resonance imaging"
version = "0.1.0"
authors = [{name = "Giulia Monopoli", email = "giulia@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10.4" 
# Generate requirements.txt using
# pip-compile --output-file=requirements.txt pyproject.toml
dependencies = [
]

[project.urls]
Homepage = "https://giuliamonopoli.github.io/Supplementary code for the paper: DeepValve: an automatic detection pipeline for the mitral valve in cardiac magnetic resonance imaging"
Documentation = "https://giuliamonopoli.github.io/Supplementary code for the paper: DeepValve: an automatic detection pipeline for the mitral valve in cardiac magnetic resonance imaging"
Source = "https://github.com/giuliamonopoli/Supplementary code for the paper: DeepValve: an automatic detection pipeline for the mitral valve in cardiac magnetic resonance imaging"
Tracker = "https://github.com/giuliamonopoli/Supplementary code for the paper: DeepValve: an automatic detection pipeline for the mitral valve in cardiac magnetic resonance imaging/issues"



[project.optional-dependencies]
# Generate requirements-dev.txt using
# pip-compile --extra=dev --output-file=requirements-dev.txt pyproject.toml
dev = [
]
# Generate requirements-docs.txt using
# pip-compile --extra=docs --output-file=requirements-docs.txt pyproject.toml
docs = [
    "jupyter-book",
    "jupytext",
    "sphinxcontrib-bibtex",
]
all = [
    "Supplementary code for the paper: DeepValve: an automatic detection pipeline for the mitral valve in cardiac magnetic resonance imaging[dev]",
    "Supplementary code for the paper: DeepValve: an automatic detection pipeline for the mitral valve in cardiac magnetic resonance imaging[docs]",
]
# Needed for editable install with no package
[tool.setuptools]
packages = []
